public/stylesheets/style.css
body {
    background: #fafafa;
    margin: 0; padding: 0;
    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
    color: #efefef;
}

a {
  color: #999;
}

.socialLinks {
    position: absolute;
    bottom: 5%;
    right: 5%;
}

header { 
    width: 90%;
    margin: 50px auto;
    overflow: auto;
    text-align: center;
}

.left { float: left;}
.right { float: right; }

.logotype { 
    color: #efefef;
    font-family: 'Cherry Swash', sans-serif; 
    font-weight: 400;
    font-size: 24pt;
    margin-top: 25px;
}

.cherry-swash {
    font-family: 'Cherry Swash';
}

section#banner {
    margin: 0 auto;
    width: 90%;
    overflow: hidden;
}

#barney {
    float: left;
    padding-left: 5%;
}

#bannerText {
    float: left;
    margin-left: 5%;
    margin-top: 20px;
}

#banner h1, #banner h2, .large-font {
    font-family: "Lato", sans-serif;
    font-weight: 300;
    color: #333;
    font-size: 3.5em;
}

#banner h2 { font-size: 22pt; }
.green { color: #96cc00; }
.yellow { color: #fabc00; }

.copyright {
    display: none;
    margin-top: 100px;
}

.large-font { font-size: 22pt; }

.rect-outline {
    border: 1px solid #333;
    border-radius: 7px;
    padding: 0.5em;
}

.centered { text-align: center; }

